<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>chinhdo</groupId>
	<artifactId>webmonitor</artifactId>
	<version>1.1</version>
	<packaging>jar</packaging>

	<name>ChinhDo.WebMonitor</name>
	<url>http://www.chinhdo.com/WebMonitor</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
    	<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>
		<!-- Needed for build on Github Ubuntu -->
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-configuration/commons-configuration -->
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.9</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>chinhdo.webmonitor.App</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.3</version>
				<executions>
				  <execution>
					<id>coverage-initialize</id>
					<goals>
					  <goal>prepare-agent</goal>
					</goals>
				  </execution>
				  <execution>
					<id>coverage-report</id>
					<phase>post-integration-test</phase>
					<goals>
					  <goal>report</goal>
					</goals>
				  </execution>
				  <!-- Threshold -->
				  <execution>
					<id>coverage-check</id>
					<goals>
					  <goal>check</goal>
					</goals>
					<configuration>
						<excludes>
							<exclude>**/SmtpHelper.*</exclude>
						  </excludes>
						<rules>
						<rule>
						  <element>CLASS</element>
						  <excludes>
							<exclude>chinhdo.mail.SmtpHelper.1</exclude>
							<exclude>chinhdo.webmonitor.App</exclude>
							<exclude>chinhdo.webmonitor.UrlHelper</exclude>
							<exclude>chinhdo.webmonitor.UrlHelper.1</exclude>
						  </excludes>
						  <limits>
							<limit>
							  <counter>LINE</counter>
							  <value>COVEREDRATIO</value>
							  <minimum>80%</minimum>
							</limit>
						  </limits>
						</rule>
					  </rules>
					</configuration>
				  </execution>
				</executions>
			  </plugin>
		</plugins>
	</build>
</project>
